@@ -6,3 +6,4 @@ Color@Window.Poly ? "poly_color"
 P@Window.Poly ? "poly_point"
 R@Window.Poly ? "poly_real"
 (])@Window.Poly ? "poly_end"
+(;)@Window.Poly ? "poly_pause"
